feat: Add comprehensive SEO processors and README updates (#9)
* feat: Add comprehensive SEO processors and README updates

* Make SEO tags conditional and add pageType

* Null-safe SEO tags, permalink and escaping

* Update README.md

* Clarify author use for list pages

* Bump deps and refactor SEO name handling

* Refactor tag SEO processing; update README

* Add defaultAuthor, labels, and SEO fixes

* Use Tag description fallback; bump platform

* Add title format setting and formatter

* Use theme route rules for list page URLs

* Read <title>/<meta> for SEO; drop titleFormat

* Add entity-level SEO fallbacks

* Clarify README wording and fallback logic

* Add per-template SEO override support

* README: refine page tables and add template enum

* Support %TITLE%/%DESC% placeholders in SEO

* Use entity fallback for SEO placeholders

* Document support for tag detail pages

https://github.com/halo-dev/halo/issues/8483 fixed